[package]
name = "bench-rs"
version = "0.2.4"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
description = "A benchmark library"
license = "MIT"
repository = "https://github.com/juzi5201314/bench-rs"
homepage = "https://github.com/juzi5201314/bench-rs"
documentation = "https://docs.rs/bench-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2"
pin-project = "1.1"
serde = { version = "1.0.116", features = ["derive"] }
bencher-macro = { version = "0.1", path = "./bencher-macro" }
stats_alloc = "0.1"
human_bytes = { version = "0.4", default-features = false }
lazy_static = "1.5"

[features]
default = ["track-allocator"]
track-allocator = ["bencher-macro/track-allocator"]

[dev-dependencies]
rcnb-rs = "0.1"
base64 = "0.22"
rand = "0.9"
tokio = { version = "^1", features = ["time", "rt", "rt-multi-thread"] }
smol = "2.0"
futures-timer = "3.0.2"
async-std = "1.6.4"
futures = "0.3.5"
