[package]
name = "bencher-macro"
version = "0.1.1"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
description = "A benchmark library"
license = "MIT"
repository = "https://github.com/juzi5201314/bench-rs"
homepage = "https://github.com/juzi5201314/bench-rs"
documentation = "https://docs.rs/bench-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
darling = "0.21"
proc-macro2 = "1.0"

[features]
track-allocator = []

[lib]
proc-macro = true
